@@ -99,14 +99,16 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)build\$(Configuration)</OutDir>
-    <IntDir>$(Platform)\$(Configuration)\obj_ds</IntDir>
+    <OutDir>$(SolutionDir)build\$(Configuration)\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\obj_ds\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Playtest|x64'">
-    <OutDir>$(SolutionDir)build\out</OutDir>
+    <OutDir>$(SolutionDir)build\$(Configuration)\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\obj_ds\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)build\out</OutDir>
+    <OutDir>$(SolutionDir)build\$(Configuration)\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\obj_ds\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -162,6 +164,7 @@
       <DisableSpecificWarnings>4312;4996</DisableSpecificWarnings>
       <UndefinePreprocessorDefinitions>UNICODE;_UNICODE</UndefinePreprocessorDefinitions>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalOptions>/we4013 /w34505 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -183,6 +186,7 @@
       <DisableSpecificWarnings>4312;4996</DisableSpecificWarnings>
       <UndefinePreprocessorDefinitions>UNICODE;_UNICODE</UndefinePreprocessorDefinitions>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalOptions>/we4013 /w34505 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -206,6 +210,7 @@
       <DisableSpecificWarnings>4312;4996</DisableSpecificWarnings>
       <UndefinePreprocessorDefinitions>UNICODE;_UNICODE</UndefinePreprocessorDefinitions>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalOptions>/we4013 /w34505 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
