@@ -35,7 +35,8 @@ BUG FIXES:
 	* Fixed font list not being loaded from pak file
 	* Fixed FUBAR'd Bahnschrift Bold and Regular 18 fonts
 	* Fixed ability to press arrow keys in legacy UI fields
-
+	* Fixed MSBuild warning generated by build path not having a trailing slash
+	
 REMOVALS:
 	* Obsolete Windows-only code
 	* Increased MAX_GLTEXTURES from 1024 to 2048
